Cleaner asserts + TestDataFactory